# unit-convertor

./: README.md  com.streamer272.UnitConvertor.json  meson.build
data/: com.streamer272.UnitConvertor.appdata.xml.in  com.streamer272.UnitConvertor.desktop.in  com.streamer272.UnitConvertor.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  convertor.vala  main.vala  meson.build  unit_convertor.gresource.xml  window.ui  window.vala
src/gtk/: help-overlay.ui  window.ui
